--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-PyMySQL>=0.9.3
-SQLAlchemy>=1.2.15
-Flask-SQLAlchemy>=2.3.2
-gevent>=1.4.0
-gunicorn>=19.9.0
-argparse~=1.4.0
-pygithub~=1.57
-flask~=2.2.5
-pandas~=2.0.3
-xgboost~=1.7.5
-scikit-learn~=1.0.1
-numpy~=1.24.4
-imblearn~=0.0
-clickhouse-sqlalchemy>=1.4.22
+clickhouse_driver==0.2.7
+Flask==2.2.5
+flask_sqlalchemy==3.1.1
+gevent==24.2.1
+imbalanced_learn==0.12.0
+imblearn==0.0
+nltk==3.8.1
+numpy==1.24.4
+pandas==2.0.3
+Requests==2.31.0
+scikit_learn==1.0.2
+statsmodels==0.14.1
+tqdm==4.66.2
+xgboost==1.7.6
